# libhdbpp-mysql

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
archiving/hdb++/libhdb++mysql/tags/release_03/: Makefile
archiving/hdb++/libhdb++mysql/tags/release_04/: Makefile
archiving/hdb++/libhdb++mysql/tags/release_04/src/: LibHdb++MySQL.h
archiving/hdb++/libhdb++mysql/tags/release_05/: Makefile
archiving/hdb++/libhdb++mysql/tags/release_06/: Makefile
archiving/hdb++/libhdb++mysql/tags/release_07/: Makefile
archiving/hdb++/libhdb++mysql/tags/release_07/src/: LibHdb++MySQL.cpp
archiving/hdb++/libhdb++mysql/tags/release_08/: Makefile
archiving/hdb++/libhdb++mysql/tags/release_09/src/: LibHdb++MySQL.cpp
archiving/hdb++/libhdb++mysql/trunk/: Makefile
archiving/hdb++/libhdb++mysql/trunk/src/: LibHdb++MySQL.cpp  LibHdb++MySQL.h
cmake/: FindLibraries.cmake  FindTango.cmake  libhdbpp-mysqlConfig.cmake.in
debian/: changelog  control  copyright  libhdb++mysql6.install  rules
etc/: add_devenum__hdb++_mysql.sql  create_hdb++_mysql.sql  create_hdb++_mysql_delete_attr_procedure.sql  create_hdb++_mysql_delete_attr_ttl_procedure.sql  create_hdb++_mysql_innodb.sql  create_hdb++_mysql_innodb_json.sql  hdb++_mysql_migrate_array_json.sql  update_devenum_hdb++_mysql_innodb_json.sql
src/: CMakeLists.txt  LibHdb++MySQL.cpp  LibHdb++MySQL.h
